add/del manual src

--- a/popup.html
+++ b/popup.html
@@ -5,55 +5,13 @@
     </head>
     <body>
         <center><h1>Steem Markdown Design Tool</h1></center>
-        <!-- <table>
+        <table>
             <tr>
-                <th class="kind">Kind</th>
-                <th class="add">Add</th>
+                <td><input style="width:450px" type="text" id="manualSrc" placeholder="Input Your Src" /></td>
+                <td><button id="addManualSrc">Add</button></td>
+                <td><button id="initialSetting">Init</button></td>
             </tr>
-            <tr>
-                <td>
-                    <div w3-include-html="/design1.html"></div>
-                </td>
-                <td>Add</td>
-            </tr>
-            <tr>
-                <td>
-                    ![CE7C41C0-F0D4-4350-891C-80941993AE47.png](https://ipfs.busy.org/ipfs/QmUKxtLW5JEnqaaAnwiLc9kFK1BqpcMGoFKTF7JLKcvJqy)
-                    <img style="width:100%;" src="https://ipfs.busy.org/ipfs/QmUKxtLW5JEnqaaAnwiLc9kFK1BqpcMGoFKTF7JLKcvJqy" />
-                </td>
-                <td>
-                    Add
-                </td>
-            </tr>
-            <tr>
-                <td class="kind">
-                    <center><h3>01</h3><img src="https://steemitimages.com/80x0/https://cdn.steemitimages.com/DQmeBM8uYHoA6vNfhKWffgTb2GsuB4iBZwWWV4hESwi4gTg/border_05.png"/></center>
-                </td>
-                <td class="add">
-                    <button id="test1">Add</button>
-                </td>
-            </tr>
-            <tr>
-                <td class="kind">
-                    <center><h2>Book Title</h2></center>
-                </td>
-                <td class="add">
-                    <button id="test2">Add</button>
-                </td>
-            </tr>
-            <tr>
-                <td class="kind">
-                    <center>
-                        <img src="https://cdn.steemitimages.com/DQmY8UA7YC68Lhh6cLFzdAESxuG8eaonPdPwKcVyEBieXK5/border_06.png" />
-                        <q> An impressive sentence in the book</q>
-                        <img src="https://cdn.steemitimages.com/DQmY8UA7YC68Lhh6cLFzdAESxuG8eaonPdPwKcVyEBieXK5/border_06.png" />
-                    </center>
-                </td>
-                <td class="add">
-                    <button id="test3">Add</button>
-                </td>
-            </tr>
-        </table> -->
+        </table>
         <table id="underlist">
         </table>
     </body>
