--- a/popup.html
+++ b/popup.html
@@ -12,10 +12,10 @@
             <div class="ui input">
                 <input type="text" id="userID" placeholder="Input User @ID" />
             </div>
-            <div class="ui primary button" id="addUserBookmark">Add</div>
-            <div class="ui orange button" id="removeUserBookmark">Del</div>
+            <div class="ui primary button" id="addUserShortcut">Add</div>
+            <div class="ui orange button" id="removeUserShortcut">Del</div>
             
-            <table class="ui olive table" id="bookmarkList"></table>
+            <table class="ui olive table" id="shortcutList"></table>
         </div>
 
         <div class="ui divider"></div>
@@ -29,7 +29,7 @@
                     </div>
                     <div class="field" style="width:10%!important">
                         <label>Image</label>
-                        <input style="width:30px" type="checkbox" id="isImage">
+                        <input style="width:30px" type="checkbox" id="isImage" checked>
                     </div>
                     <div class="field" style="width:15%!important">
                         <div class="ui primary button" id="addManualSrc">Add</div>
