--- a/popup.html
+++ b/popup.html
@@ -52,5 +52,9 @@
 </body>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.css">
 <link href="style.css" rel="stylesheet">
-<script src="background.js"></script>
+<!--<script src="//cdn.steemjs.com/lib/latest/steem.min.js"></script>-->
+<script src="classes.js"></script>
+<script src="const.js"></script>
+<script src="srcManager.js"></script>
+<script src="shortcutManager.js"></script>
 </html>
