--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <div style="width:500px!important;" class="ui container">
+        <div class="ui black button" id="copied" style="display:none;position:fixed;top:10px;right:15px;z-index:999;">Copied!!</div>
+
         <center><h1>Steemit Tools</h1></center>
         <div class="ui raised segment">
             <h3>User Shortcuts</h3>
@@ -47,6 +49,9 @@
                 <tbody id="underlist">
                 </tbody>
             </table>
+            <div class="ui input">
+                <input type="text" id="clipboard" style="display:none;" />
+            </div>
         </div>
     </div>
 </body>
