'add_common_js'

--- a/popup.html
+++ b/popup.html
@@ -56,10 +56,11 @@
     </div>
 </body>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.css">
-<link href="style.css" rel="stylesheet">
-<!--<script src="//cdn.steemjs.com/lib/latest/steem.min.js"></script>-->
+<link rel="stylesheet" href="style.css">
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"> -->
 <script src="classes.js"></script>
 <script src="const.js"></script>
+<script src="common.js"></script>
 <script src="srcManager.js"></script>
 <script src="shortcutManager.js"></script>
 </html>
