'working_user_detail'

--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,7 @@
                 </div>
                 <div class="ui primary button" id="addUserShortcut">Add</div>
                 <div class="ui orange button" id="removeUserShortcut">Del</div>
+                <div class="ui orange button" id="userDetailBtn">Detail</div>
                 
                 <table class="ui olive table" id="shortcutList"></table>
             </div>
