add_user_detail

--- a/popup.html
+++ b/popup.html
@@ -24,10 +24,13 @@
                 <div class="ui input">
                     <input type="text" id="userID" placeholder="Input @ID" />
                 </div>
-                <div class="ui primary button" id="addUserShortcut">Add</div>
-                <div class="ui orange button" id="removeUserShortcut">Del</div>
-                <div class="ui teal button" id="sortABC">Sort</div>
-                <div class="ui orange button" id="userDetailBtn">Detail</div>
+                <div class="ui primary button func" id="addUserShortcut">Add</div>
+                <div class="ui orange button func" id="removeUserShortcut">Del</div>
+                <div class="ui teal button func" id="sortABC">Sort</div>
+                <div class="ui toggle checkbox">
+                    <input type="checkbox" name="public" id="userDetailBtn">
+                    <label>Detail View</label>
+                </div>
                 <table class="ui olive table" id="shortcutList"></table>
             </div>
             <div class="title accordionTitle tagShortcut" val="tagShortcut">
